rust/vox-macros-core/src/snapshots/vox_macros_core__tests__method_retry_helper_attributes.snap
---
source: rust/vox-macros-core/src/lib.rs
expression: "generate(quote!\n{\n    trait Billing\n    {\n        #[vox(idem)] async fn get_balance(&self, account: String) -> u64;\n        #[vox(persist)] async fn send_money(&self, from: String, to: String)\n        -> Result<u64, TransferError>;\n    }\n})"
---
#[allow(non_snake_case, clippy::all)]
pub fn billing_service_descriptor() -> &'static ::vox::session::ServiceDescriptor {
    static DESCRIPTOR: std::sync::OnceLock<&'static ::vox::session::ServiceDescriptor> =
        std::sync::OnceLock::new();
    DESCRIPTOR . get_or_init (|| { let methods : Vec < & 'static :: vox :: session :: MethodDescriptor > = vec ! [:: vox :: hash :: method_descriptor_with_retry :: < (String ,) , u64 > ("Billing" , "get_balance" , & ["account"] , None , :: vox :: RetryPolicy { persist : false , idem : true , } ,) , :: vox :: hash :: method_descriptor_with_retry :: < (String , String ,) , Result < u64 , TransferError > > ("Billing" , "send_money" , & ["from" , "to"] , None , :: vox :: RetryPolicy { persist : true , idem : false , } ,)] ; Box :: leak (Box :: new (:: vox :: session :: ServiceDescriptor { service_name : "Billing" , methods : Box :: leak (methods . into_boxed_slice ()) , doc : None , })) })
}
pub trait Billing
where
    Self: ::vox::MaybeSend + ::vox::MaybeSync,
{
    fn get_balance(
        &self,
        account: String,
    ) -> impl std::future::Future<Output = u64> + ::vox::MaybeSend;
    fn send_money(
        &self,
        from: String,
        to: String,
    ) -> impl std::future::Future<Output = Result<u64, TransferError>> + ::vox::MaybeSend;
}
#[doc = r" Dispatcher for this service."]
#[doc = r""]
#[doc = r" Wraps a handler and implements [`#vox::Handler`] by routing incoming"]
#[doc = r" calls to the appropriate trait method by method ID."]
#[derive(Clone)]
pub struct BillingDispatcher<H> {
    handler: H,
    middlewares: Vec<::std::sync::Arc<dyn ::vox::ServerMiddleware>>,
}
impl<H> BillingDispatcher<H>
where
    H: Billing + Clone + ::vox::MaybeSend + ::vox::MaybeSync + 'static,
{
    #[doc = r" Create a new dispatcher wrapping the given handler."]
    pub fn new(handler: H) -> Self {
        Self {
            handler,
            middlewares: vec![],
        }
    }
    #[doc = r" Append a server middleware to this dispatcher."]
    pub fn with_middleware(mut self, middleware: impl ::vox::ServerMiddleware) -> Self {
        self.middlewares.push(::std::sync::Arc::new(middleware));
        self
    }
    async fn run_pre_hooks(&self, context: &::vox::RequestContext<'_>) {
        for middleware in &self.middlewares {
            middleware.pre(context).await;
        }
    }
    async fn run_post_hooks(
        &self,
        context: &::vox::RequestContext<'_>,
        outcome: ::vox::ServerCallOutcome,
    ) {
        for middleware in self.middlewares.iter().rev() {
            middleware.post(context, outcome).await;
        }
    }
}
impl<H, R> ::vox::Handler<R> for BillingDispatcher<H>
where
    H: Billing + Clone + ::vox::MaybeSend + ::vox::MaybeSync + 'static,
    R: ::vox::ReplySink,
{
    fn retry_policy(&self, method_id: ::vox::MethodId) -> ::vox::RetryPolicy {
        if method_id == billing_service_descriptor().methods[0usize].id {
            return ::vox::RetryPolicy {
                persist: false,
                idem: true,
            };
        }
        if method_id == billing_service_descriptor().methods[1usize].id {
            return ::vox::RetryPolicy {
                persist: true,
                idem: false,
            };
        }
        ::vox::RetryPolicy::VOLATILE
    }
    fn args_have_channels(&self, method_id: ::vox::MethodId) -> bool {
        if method_id == billing_service_descriptor().methods[0usize].id {
            return ::vox::hash::shape_contains_channel(
                billing_service_descriptor().methods[0usize].args_shape,
            );
        }
        if method_id == billing_service_descriptor().methods[1usize].id {
            return ::vox::hash::shape_contains_channel(
                billing_service_descriptor().methods[1usize].args_shape,
            );
        }
        false
    }
    fn response_wire_shape(
        &self,
        method_id: ::vox::MethodId,
    ) -> Option<&'static ::vox::facet::Shape> {
        if method_id == billing_service_descriptor().methods[0usize].id {
            return Some (< Result < u64 , :: vox :: VoxError < :: core :: convert :: Infallible >> as :: vox :: facet :: Facet < 'static >> :: SHAPE ,) ;
        }
        if method_id == billing_service_descriptor().methods[1usize].id {
            return Some (< Result < u64 , :: vox :: VoxError < TransferError >> as :: vox :: facet :: Facet < 'static >> :: SHAPE ,) ;
        }
        None
    }
    async fn handle(
        &self,
        call: ::vox::SelfRef<::vox::RequestCall<'static>>,
        reply: R,
        schemas: ::std::sync::Arc<::vox::SchemaRecvTracker>,
    ) {
        let method_id = call.method_id;
        let args_bytes = match &call.args {
            ::vox::Payload::PostcardBytes(bytes) => bytes,
            _ => {
                reply
                    .send_error(
                        ::vox::VoxError::<::core::convert::Infallible>::InvalidPayload(
                            "args not PostcardBytes".into(),
                        ),
                    )
                    .await;
                return;
            }
        };
        if method_id == billing_service_descriptor().methods[0usize].id {
            let deser_result = if let Some(binder) = reply.channel_binder() {
                ::vox::with_channel_binder(binder, || {
                    ::vox::schema_deser::schema_deserialize_args_borrowed::<(String,)>(
                        args_bytes, method_id, &schemas,
                    )
                })
            } else {
                ::vox::schema_deser::schema_deserialize_args_borrowed::<(String,)>(
                    args_bytes, method_id, &schemas,
                )
            };
            let args: (String,) = match deser_result {
                Ok(v) => v,
                Err(e) => {
                    ::std::eprintln!(
                        "[rpc] dispatch args decode failed: method={:?} error={}",
                        method_id,
                        e
                    );
                    reply
                        .send_typed_error::<u64, ::core::convert::Infallible>(::vox::VoxError::<
                            ::core::convert::Infallible,
                        >::InvalidPayload(
                            e.to_string()
                        ))
                        .await;
                    return;
                }
            };
            let (account,) = args;
            let extensions = ::vox::Extensions::new();
            let context = ::vox::RequestContext::with_transport(
                billing_service_descriptor().methods[0usize],
                &call.metadata,
                reply.request_id(),
                reply.connection_id(),
                &extensions,
            );
            if !self.middlewares.is_empty() {
                self.run_pre_hooks(&context).await;
            }
            let (reply, outcome_handle) = ::vox::observe_reply(reply);
            let value = self.handler.get_balance(account).await;
            let sink_call = ::vox::SinkCall::new(reply);
            ::vox::Call::<'_, u64, ::core::convert::Infallible>::ok(sink_call, value).await;
            if !self.middlewares.is_empty() {
                self.run_post_hooks(&context, outcome_handle.outcome())
                    .await;
            }
            return;
        }
        if method_id == billing_service_descriptor().methods[1usize].id {
            let deser_result = if let Some(binder) = reply.channel_binder() {
                ::vox::with_channel_binder(binder, || {
                    ::vox::schema_deser::schema_deserialize_args_borrowed::<(String, String)>(
                        args_bytes, method_id, &schemas,
                    )
                })
            } else {
                ::vox::schema_deser::schema_deserialize_args_borrowed::<(String, String)>(
                    args_bytes, method_id, &schemas,
                )
            };
            let args: (String, String) = match deser_result {
                Ok(v) => v,
                Err(e) => {
                    ::std::eprintln!(
                        "[rpc] dispatch args decode failed: method={:?} error={}",
                        method_id,
                        e
                    );
                    reply
                        .send_typed_error::<u64, ::core::convert::Infallible>(::vox::VoxError::<
                            ::core::convert::Infallible,
                        >::InvalidPayload(
                            e.to_string()
                        ))
                        .await;
                    return;
                }
            };
            let (from, to) = args;
            let extensions = ::vox::Extensions::new();
            let context = ::vox::RequestContext::with_transport(
                billing_service_descriptor().methods[1usize],
                &call.metadata,
                reply.request_id(),
                reply.connection_id(),
                &extensions,
            );
            if !self.middlewares.is_empty() {
                self.run_pre_hooks(&context).await;
            }
            let (reply, outcome_handle) = ::vox::observe_reply(reply);
            let result = self.handler.send_money(from, to).await;
            let sink_call = ::vox::SinkCall::new(reply);
            ::vox::Call::<'_, u64, TransferError>::reply(sink_call, result).await;
            if !self.middlewares.is_empty() {
                self.run_post_hooks(&context, outcome_handle.outcome())
                    .await;
            }
            return;
        }
        reply
            .send_error(::vox::VoxError::<::core::convert::Infallible>::UnknownMethod)
            .await;
    }
}
#[doc = "Client for the `Billing` service.\n\nStores a type-erased [`Caller`](:: vox::Caller) implementation."]
#[must_use = "Dropping this client may close the connection if it is the last caller."]
#[derive(Clone)]
pub struct BillingClient {
    caller: ::vox::ErasedCaller,
}
impl BillingClient {
    #[doc = r" Create a new client wrapping the given caller."]
    pub fn new(caller: impl ::vox::Caller) -> Self {
        Self {
            caller: ::vox::ErasedCaller::new(caller),
        }
    }
    #[doc = r" Append a client middleware to this client."]
    pub fn with_middleware(self, middleware: impl ::vox::ClientMiddleware) -> Self {
        Self {
            caller: self
                .caller
                .with_middleware(billing_service_descriptor(), middleware),
        }
    }
    #[doc = r" Resolve when the underlying connection closes."]
    pub async fn closed(&self) {
        ::vox::Caller::closed(&self.caller).await;
    }
    #[doc = r" Return whether the underlying connection is still considered connected."]
    pub fn is_connected(&self) -> bool {
        ::vox::Caller::is_connected(&self.caller)
    }
    pub async fn get_balance(&self, account: String) -> Result<u64, ::vox::VoxError> {
        let method_id = billing_service_descriptor().methods[0usize].id;
        let args = (account,);
        let mut metadata = Default::default();
        ::vox::ensure_channel_retry_mode(&mut metadata, ::vox::ChannelRetryMode::None);
        let req = ::vox::RequestCall {
            method_id,
            args: ::vox::Payload::outgoing(&args),
            metadata,
            schemas: Default::default(),
        };
        let with_tracker = match ::vox::Caller::call(&self.caller, req).await {
            Ok(with_tracker) => with_tracker,
            Err(e) => {
                return Err(match e {
                    ::vox::VoxError::UnknownMethod => {
                        ::vox::VoxError::<::core::convert::Infallible>::UnknownMethod
                    }
                    ::vox::VoxError::InvalidPayload(msg) => {
                        ::vox::VoxError::<::core::convert::Infallible>::InvalidPayload(msg)
                    }
                    ::vox::VoxError::Cancelled => {
                        ::vox::VoxError::<::core::convert::Infallible>::Cancelled
                    }
                    ::vox::VoxError::ConnectionClosed => {
                        ::vox::VoxError::<::core::convert::Infallible>::ConnectionClosed
                    }
                    ::vox::VoxError::SessionShutdown => {
                        ::vox::VoxError::<::core::convert::Infallible>::SessionShutdown
                    }
                    ::vox::VoxError::SendFailed => {
                        ::vox::VoxError::<::core::convert::Infallible>::SendFailed
                    }
                    ::vox::VoxError::Indeterminate => {
                        ::vox::VoxError::<::core::convert::Infallible>::Indeterminate
                    }
                    ::vox::VoxError::User(never) => match never {},
                });
            }
        };
        let ::vox::WithTracker {
            value: response,
            tracker: schema_tracker,
        } = with_tracker;
        let ret_bytes = match &response.ret {
            ::vox::Payload::PostcardBytes(bytes) => bytes,
            _ => {
                return Err(
                    ::vox::VoxError::<::core::convert::Infallible>::InvalidPayload(
                        "response not PostcardBytes".into(),
                    ),
                );
            }
        };
        let result: Result<u64, ::vox::VoxError<::core::convert::Infallible>> =
            ::vox::schema_deser::schema_deserialize_response::<
                Result<u64, ::vox::VoxError<::core::convert::Infallible>>,
            >(ret_bytes, method_id, &schema_tracker)
            .map_err(|e| {
                ::vox::VoxError::<::core::convert::Infallible>::InvalidPayload(e.to_string())
            })?;
        match result {
            Ok(ret) => Ok(ret),
            Err(err) => Err(err),
        }
    }
    pub async fn send_money(
        &self,
        from: String,
        to: String,
    ) -> Result<u64, ::vox::VoxError<TransferError>> {
        let method_id = billing_service_descriptor().methods[1usize].id;
        let args = (from, to);
        let mut metadata = Default::default();
        ::vox::ensure_channel_retry_mode(&mut metadata, ::vox::ChannelRetryMode::None);
        let req = ::vox::RequestCall {
            method_id,
            args: ::vox::Payload::outgoing(&args),
            metadata,
            schemas: Default::default(),
        };
        let with_tracker = match ::vox::Caller::call(&self.caller, req).await {
            Ok(with_tracker) => with_tracker,
            Err(e) => {
                return Err(match e {
                    ::vox::VoxError::UnknownMethod => {
                        ::vox::VoxError::<TransferError>::UnknownMethod
                    }
                    ::vox::VoxError::InvalidPayload(msg) => {
                        ::vox::VoxError::<TransferError>::InvalidPayload(msg)
                    }
                    ::vox::VoxError::Cancelled => ::vox::VoxError::<TransferError>::Cancelled,
                    ::vox::VoxError::ConnectionClosed => {
                        ::vox::VoxError::<TransferError>::ConnectionClosed
                    }
                    ::vox::VoxError::SessionShutdown => {
                        ::vox::VoxError::<TransferError>::SessionShutdown
                    }
                    ::vox::VoxError::SendFailed => ::vox::VoxError::<TransferError>::SendFailed,
                    ::vox::VoxError::Indeterminate => {
                        ::vox::VoxError::<TransferError>::Indeterminate
                    }
                    ::vox::VoxError::User(never) => match never {},
                });
            }
        };
        let ::vox::WithTracker {
            value: response,
            tracker: schema_tracker,
        } = with_tracker;
        let ret_bytes = match &response.ret {
            ::vox::Payload::PostcardBytes(bytes) => bytes,
            _ => {
                return Err(::vox::VoxError::<TransferError>::InvalidPayload(
                    "response not PostcardBytes".into(),
                ));
            }
        };
        let result: Result<u64, ::vox::VoxError<TransferError>> =
            ::vox::schema_deser::schema_deserialize_response::<
                Result<u64, ::vox::VoxError<TransferError>>,
            >(ret_bytes, method_id, &schema_tracker)
            .map_err(|e| ::vox::VoxError::<TransferError>::InvalidPayload(e.to_string()))?;
        match result {
            Ok(ret) => Ok(ret),
            Err(err) => Err(err),
        }
    }
}
impl From<::vox::DriverCaller> for BillingClient {
    fn from(caller: ::vox::DriverCaller) -> Self {
        Self::new(caller)
    }
}
